# PRS-sc25

./: .gitignore  README.md
PRS-SC25/: CMakeLists.txt
PRS-SC25-SBVA/: CMakeLists.txt  LICENSE
PRS-SC25-SBVA/docker/prs-images/: build_PRS_images.sh  nocache_build_PRS_images.sh
PRS-SC25-SBVA/docker/prs-images/common/: Dockerfile
PRS-SC25-SBVA/docker/prs-images/leader/: Dockerfile  solver
PRS-SC25-SBVA/src/preprocess/: preprocess.hpp
PRS-SC25-SBVA/src/preprocess/sbva/: BloomFilter.cpp  BloomFilter.h  Logger.cpp  StructuredBva.cpp  StructuredBvaRun.cpp  System.cpp
PRS-SC25-SBVA/src/prs/: bucket.hpp  clause.hpp  parellel_pre.hpp  prs.cpp
PRS-SC25-SBVA/src/prs/strategies/: prs_with_sbva.cpp  tradition_prs.cpp
PRS-SC25/docker/prs-images/: build_PRS_images.sh  nocache_build_PRS_images.sh
PRS-SC25/docker/prs-images/common/: Dockerfile
PRS-SC25/docker/prs-images/leader/: Dockerfile  solver
PRS-SC25/docker/runner/: input.json  run_dist_leader.sh  run_dist_worker.sh  run_parallel.sh
PRS-SC25/docker/satcomp-images/: build_satcomp_images.sh
PRS-SC25/src/: main.cpp
PRS-SC25/src/preprocess/: preprocess.cpp
PRS-SC25/src/preprocess/sbva/: PreprocessInterface.h  StructuredBva.hpp  hashfunc.h
PRS-SC25/src/prs/: deversity.hpp  options.hpp  prs.hpp  statistics.hpp
PRS-SC25/src/solvers/: kissat.hpp  yalsat.hpp
PRS-SC25/src/utils/: cnf_parser.hpp  concurrentqueue.h  parse.hpp
